--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 #root {
   width: 100%;
   min-height: 100vh;
-  margin: 0;
+  margin: 0; padding: 0;
   text-align: center;
   display: block;
   background-color: var(--bg);
@@ -31,7 +31,11 @@
   top: 2rem;
   right: 1rem;
 }
-[data-theme="light"] button, option{
+
+[data-theme="light"] option{
+  background-color: var(--text);
+}
+[data-theme="light"] button{
   color: var(--text);
   font-weight: 700;
 }
@@ -59,6 +63,7 @@ select#theme{
   border: 1px solid var(--ring);
   padding-block: 40px;
   box-shadow: inset -2px 2px 2px var(--ring);
+  transition: all 0.3s ease;
 }
 .col_2{
   width: calc(100% - 350px);
@@ -66,6 +71,11 @@ select#theme{
   border: 1px solid var(--ring);
   box-shadow: inset 0 2px 2px var(--ring);
 }
+
+.toggleCreateBtn{
+  margin-bottom: 10px;
+}
+
 ::-webkit-scrollbar{
   width: 0;
   appearance: none;
